--- a/app/src/main/res/layout/contacts_rec_view.xml
+++ b/app/src/main/res/layout/contacts_rec_view.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rec_contact_view"
+    android:id="@+id/r_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.v7.widget.RecyclerView>
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/rec_contact_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_add_btn"/>
+
+
+</RelativeLayout>
