--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,7 +8,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/recycler_view_tollbar"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"/>
+        android:layout_height="?android:attr/actionBarSize"
+        tools:targetApi="honeycomb" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
